--- a/handcrafted-haven/src/app/globals.css
+++ b/handcrafted-haven/src/app/globals.css
@@ -176,6 +176,9 @@ img {
     height: 250px;
     background-color: #ddd;
     position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* Placeholder for images */
@@ -187,6 +190,19 @@ img {
     height: 100%;
     color: #888;
     background-color: #eee;
+}
+
+/* When an actual image is present, hide the placeholder pseudo-element */
+.card-image.has-image::before {
+    display: none;
+}
+
+/* Image element fallback (if switching to <img> tags) */
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .card-content {
